[package]
name = "dothereum-executor"
version = "0.3.0"
authors = ["Parity Technologies"]
description = "Dothereum node implementation in Rust."
edition = "2018"

[dependencies]
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "1.1.0" }
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git' }
state_machine = { package = "substrate-state-machine", git = 'https://github.com/paritytech/substrate.git' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git' }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git' }
trie = { package = "substrate-trie", git = 'https://github.com/paritytech/substrate.git' }
dothereum-primitives = { path = "../primitives" }
dothereum-runtime = { path = "../runtime" }

[dev-dependencies]
dothereum-testing = { path = "../testing" }
test-client = { package = "substrate-test-client", git = 'https://github.com/paritytech/substrate.git' }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git' }
runtime_support = { package = "paint-support", git = 'https://github.com/paritytech/substrate.git' }
balances = { package = "paint-balances", git = 'https://github.com/paritytech/substrate.git' }
transaction-payment = { package = "paint-transaction-payment", git = 'https://github.com/paritytech/substrate.git' }
session = { package = "paint-session", git = 'https://github.com/paritytech/substrate.git' }
system = { package = "paint-system", git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "paint-timestamp", git = 'https://github.com/paritytech/substrate.git' }
treasury = { package = "paint-treasury", git = 'https://github.com/paritytech/substrate.git' }
contracts = { package = "paint-contracts", git = 'https://github.com/paritytech/substrate.git' }
grandpa = { package = "paint-grandpa", git = 'https://github.com/paritytech/substrate.git' }
indices = { package = "paint-indices", git = 'https://github.com/paritytech/substrate.git' }
wabt = "0.9.2"
criterion = "0.3.0"

[features]
wasmtime = [
    "substrate-executor/wasmtime",
]
wasmi-errno = [
    "substrate-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false

