[package]
name = "dothereum-rpc-client"
version = "0.3.0"
authors = ["Parity Technologies"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "14.0.3", features = ["http", "ws"] }
log = "0.4.8"
dothereum-primitives = { path = "../primitives" }
substrate-rpc = { git = 'https://github.com/paritytech/substrate.git', version = "2.0.0" }
