[package]
name = "dothereum-runtime"
version = "0.2.0"
authors = ["Schoedon"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default_features = false }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', default_features = false }
version = { package = "sr-version", git = 'https://github.com/paritytech/substrate.git', default_features = false }
support = { package = "paint-support", git = 'https://github.com/paritytech/substrate.git', default_features = false }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', default_features = false }
substrate-session = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
balances = { package = "paint-balances", git = 'https://github.com/paritytech/substrate.git', default_features = false }
aura = { package = "paint-aura", git = 'https://github.com/paritytech/substrate.git', default_features = false }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = 'https://github.com/paritytech/substrate.git', default_features = false }
grandpa = { package = "paint-grandpa", git = 'https://github.com/paritytech/substrate.git', default_features = false }
executive = { package = "paint-executive", git = 'https://github.com/paritytech/substrate.git', default_features = false }
indices = { package = "paint-indices", git = 'https://github.com/paritytech/substrate.git', default_features = false }
randomness-collective-flip = { package = "paint-randomness-collective-flip", git = 'https://github.com/paritytech/substrate.git', default_features = false }
system = { package = "paint-system", git = 'https://github.com/paritytech/substrate.git', default_features = false }
timestamp = { package = "paint-timestamp", git = 'https://github.com/paritytech/substrate.git', default_features = false }
sudo = { package = "paint-sudo", git = 'https://github.com/paritytech/substrate.git', default_features = false }
transaction-payment = { package = "paint-transaction-payment", git = 'https://github.com/paritytech/substrate.git', default_features = false }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git', default_features = false }
client = { package = "substrate-client", git = 'https://github.com/paritytech/substrate.git', default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
evm = { package = "paint-evm", git = 'https://github.com/paritytech/substrate.git', default_features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"aura/std",
	"aura-primitives/std",
	"grandpa/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"evm/std",
]
